--- a/css/style.css
+++ b/css/style.css
@@ -782,7 +782,7 @@ h6 {
         url('/img/Rectangle14.png') no-repeat;
     background-position: right bottom;
     background-size: cover;
-    background-attachment: fixed
+    background-attachment: scroll
 }
 
 .promocion .left {
