--- a/css/style.css
+++ b/css/style.css
@@ -849,7 +849,7 @@ h6 {
     position: absolute;
     bottom: 0;
     right: 0;
-    filter: blur(1px);
+    /* filter: blur(1px); */
 }
 
 @media(width >=768px) {
