--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ h6 {
 .banner {
     height: 100%;
     background: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, .8)),
-        url('/img/rsz_banner.jpg') no-repeat;
+        url('/img/rsz_rsz_banner.jpg') no-repeat;
     background-position: center;
     background-size: cover;
     display: grid;
@@ -470,7 +470,8 @@ h6 {
 }
 
 .info .right img {
-    object-fit: contain;
+    height: 100%;
+    object-fit: cover;
 }
 
 @media(width >=768px) {
@@ -784,7 +785,7 @@ h6 {
     flex-direction: column;
     align-items: center;
     background: linear-gradient(#8e4c0672, #60360988),
-        url('/img/rsz_1rectangle14.png') no-repeat;
+        url('/img/rsz_rsz_1rectangle14.png') no-repeat;
     background-position: right bottom;
     background-size: cover;
     background-attachment: scroll
