--- a/css/style.css
+++ b/css/style.css
@@ -467,9 +467,12 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-width: 100%;
 }
 
 .info .right img {
+    min-height: 16.8rem;
+    max-height: 25rem;
     height: 100%;
     object-fit: cover;
 }
