--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,7 @@ h6 {
     flex-direction: column;
     gap: 2.5rem;
     justify-content: center;
+    position: relative;
     /* align-items: center; */
 }
 
@@ -1122,3 +1123,70 @@ h6 {
 }
 
 /* FOOTER TERMINA ACÁ */
+
+
+/* modal */
+
+.modal {
+    padding: 0;
+    position: absolute;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+    display: none;
+}
+
+.modal .contenido-modal {
+    width: 19rem;
+    min-height: 16rem;
+    background-color: #Fff;
+    box-shadow: 0px 1px 5px #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 2rem;
+    /* justify-content: space-between; */
+    padding: 2%;
+    line-height: 1;
+    text-align: center;
+}
+
+.modal .contenido-modal h2 {
+    font-size: 1.8rem;
+    font-family: 'Azeret Mono', monospace;
+    margin-top: 1.5rem;
+}
+
+.modal .contenido-modal input {
+    padding: 5%;
+}
+
+.modal .contenido-modal .btn {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.modal .contenido-modal .btn button {
+    height: 3rem;
+    border: none;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+
+.modal .contenido-modal .btn .adds {
+    width: 8rem;
+    background-color: #fbc583;
+    font-family: 'Handjet', cursive;
+    font-weight: 700;
+}
+
+.modal .contenido-modal .btn #cancelar {
+    font-family: 'Handjet', cursive;
+    font-weight: 400;
+    background-color: #ccc;
+    width: 5rem;
+}
